# ceo-transcriber

./: .env.example  README.md  pyproject.toml  requirements.txt  streamlit_app.py
docs/plans/: 2026-03-06-spotify-migration-design.md  2026-03-06-spotify-migration-implementation.md
docs/superpowers/specs/: 2026-03-17-gemini-prompt-improvements-design.md
src/: analyzer.py  config.py  main.py  notion_db.py  podcast.py  whisper_fallback.py  youtube.py
tests/: test_analyzer.py  test_config.py  test_main.py  test_notion_db.py  test_podcast.py  test_whisper_fallback.py  test_youtube.py
